Fix and auth-token in the swagger
