# src/controllers/auth.Controller.ts
@@ -14,9 +14,10 @@ export const signup = async (req:Request, res: Response) => {
     const savedUser = await user.save();
     //token
     const token: string = jwt.sign({ id: savedUser._id}, process.env.TOKEN_SECRET || 'tokentest' )
-
+    console.log("token",token)
     
     res.header('auth-token', token ).json(savedUser);
+    console.log('auth-token',token)
 }
 
 export const signin = async (req:Request, res: Response) => {
@@ -30,11 +31,15 @@ export const signin = async (req:Request, res: Response) => {
     const token = jwt.sign({_id:user._id}, process.env.TOKEN_SECRET || 'tokentest',{
         expiresIn: 60 * 60 * 24
     })
+    console.log("token",token)
     res.header('auth-token', token).json(user);
+    
 }
 
 export const profile = async (req: Request, res: Response) => {
+    console.log("req",req.userId)
     const user = await User.findById(req.userId, { password: 0});
+    console.log("user",user)
     if(!user) return res.status(404).json('No User found');
     res.json(user);
     
